Cleaned the application properties file for unit tests and left comments

--- a/src/test/resources/application-unit.properties
+++ b/src/test/resources/application-unit.properties
@@ -1,9 +1,20 @@
+# Use in-memory H2 database for unit tests
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.show-sql=true
+
+# Letting @SQL annotations manage the schema
 spring.jpa.hibernate.ddl-auto=none
+
+# Show SQL statements in the console (optional, useful for debugging)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# H2 Console settings (optional, useful for debugging)
 spring.h2.console.enabled=true
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+# Use H2 dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
